# data-lakehouse-api

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/src/: config.rs  lib.rs
config/: etl.toml  lakehouse.toml
etl/: Cargo.toml
etl/src/: lib.rs  main.rs
etl/src/client/: http.rs  mod.rs  pool.rs
etl/src/models/: mod.rs  ratings.rs  response.rs  vendor.rs
etl/src/services/: api.rs  vendor.rs
etl/src/storage/: json.rs  minio.rs  parquet.rs
etl/src/utils/: retry.rs
lakehouse/: Cargo.toml
lakehouse/src/: lib.rs  main.rs  schema.rs
lakehouse/src/api/: mod.rs  models.rs  routes.rs
lakehouse/src/models/: mod.rs  schema.rs
lakehouse/src/processor/: bronze.rs  config.rs  deduplication.rs  metadata.rs  mod.rs  table.rs  udf.rs
lakehouse/src/processor/bronze/: dedup.rs  metadata.rs  mod.rs  schema.rs  storage.rs  transform.rs  types.rs  validation.rs
lakehouse/src/processor/core/: mod.rs
lakehouse/src/processor/metadata/: convert.rs  mod.rs  quality.rs  registry.rs  types.rs
lakehouse/src/processor/query/: mod.rs
lakehouse/src/processor/registration/: mod.rs
lakehouse/src/processor/silver/: metadata.rs  mod.rs  schema.rs  storage.rs  transform.rs  types.rs
lakehouse/src/processor/storage/: mod.rs
lakehouse/src/services/: lakehouse.rs  mod.rs  query.rs  utils.rs
lakehouse/src/storage/: mod.rs  s3.rs
lakehouse/src/utils/: arrow.rs  mod.rs  paths.rs
notification/: Cargo.toml
