[workspace]


resolver = "2"
members = [ "common","etl", "lakehouse", "notification"]

# Shared dependencies for all workspace members
[workspace.dependencies]
# Async Runtime, Web and Data Processing
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.1", features = ["json"] }
arrow = { version = "54.2.1", features = ["json"] }
parquet = { version = "54.2.1", features = ["arrow"] }
datafusion = { version = "46.0.1", default-features = false, features = ["parquet"]}
tower-http = { version = "0.5.1", features = ["trace"] }
tower = "0.4.13"
async-trait = "0.1"
futures = "0.3.31"
rquest = "3.0.5"



# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter", "local-time"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# AWS
aws-sdk-s3 = { version = "1.9.0", features = ["behavior-version-latest"] }
aws-smithy-runtime-api = "1.1.1"
aws-config = "1.1.1"
object_store = { version = "0.11.2", features = ["aws"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.13"

# CLI
clap = "4.4.10"

url = "2.5.4"
