[package]
name = "etl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "etl-cli"  # Changed binary name to avoid conflict
path = "src/main.rs"

[dependencies]
# Data Processing
arrow.workspace = true
parquet.workspace = true


# Other shared dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aws-sdk-s3.workspace = true
aws-smithy-runtime-api.workspace = true
aws-config.workspace = true
thiserror.workspace = true
anyhow.workspace = true
config.workspace = true
async-trait.workspace = true
futures.workspace = true
clap.workspace = true

# Extraction and Load specific dependencies
rquest = "3.0.5"
rquest-util = "0.2.5"
http = "1.2.0"
rand = "0.9.0"
tempfile = "3.18.0"
bytes = "1.10.1"


# Internal dependencies
common = { path = "../common" }
