[package]
name = "lakehouse"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lakehouse-cli"  # Changed binary name to avoid conflict
path = "src/main.rs"

[dependencies]
# Workspace shared dependencies
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aws-sdk-s3.workspace = true
aws-smithy-runtime-api.workspace = true
aws-config.workspace = true
thiserror.workspace = true
anyhow.workspace = true
config.workspace = true
arrow.workspace = true
parquet.workspace = true
futures.workspace = true
clap.workspace = true
datafusion.workspace = true
object_store.workspace = true
url.workspace = true

#Lakehouse specific dependencies
uuid = "1.16.0"
bytes = "1.10.1"
dashmap = "6.1.0"
async-trait = "0.1.88"
lazy_static = "1.4.0"

# Internal dependencies
common = { path = "../common" }

etl = { path = "../etl" }
